# mlxcel

./: .gitignore  .gitleaksignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  SECURITY.md  build.rs  deny.toml  mkdocs.ko.pdf.yml  mkdocs.ko.yml  mkdocs.pdf.yml  mkdocs.yml  models  rust-toolchain.toml
python/: .gitignore  README.md  pyproject.toml
python/examples/: quickstart.py  streaming.py  structured_output.py
python/src/mlxcel/: __init__.py  _async_client.py  _client.py  _common.py  _sampling.py  _server.py  errors.py
python/tests/: fake_server.py  test_client_mock.py  test_e2e.py  test_lifecycle.py
spike/iree-ffi/: .gitignore  Cargo.toml  FINDINGS.md  FINDINGS_batch.md  FINDINGS_ragged.md  FINDINGS_sched.md  README.md  add.mlir  build.rs  iree_gate.c  validate_batch.sh
spike/iree-ffi/src/: main.rs
spike/openxla/: .gitignore  FINDINGS.md  FINDINGS_phase2a.md  FINDINGS_phase2b.md  MULTIMODAL_VLM_DESIGN.md  README.md  SSM_HYBRID_DESIGN.md  STAGE2_DESIGN.md  analyze.py  arch_execution_check.py  aux_smoke.mlir  check_correctness.py  deepstack_prefill_check.py  dense_arch_check.py  dense_arch_pack_check.py  fusion_probe.py  gemma2_sliding_window_check.py  gpu_iree.py  iree_run.py  llava_cli_server_check.py  llava_reference_oracle.py  model_int4.py  model_jax.py  moe_oracle.py  oracle_continuation.py  phase2b_gpu.py  prefill_embeddings_check.py  pyproject.toml  quant.py  qwen_oracle.py  run_phase2a.py  run_spike.py  synthetic_arch_check.py  test_llava_reference_oracle.py  xla_aux_smoke.c
spike/rust-emitter/: .gitignore  Cargo.toml  FINDINGS.md  README.md  validate.sh
spike/rust-emitter/python/: run_decode.py  run_prefill.py
spike/rust-emitter/src/: builder.rs  config.rs  main.rs  model.rs  rope.rs
src/lib/mlx-cpp/: CMakeLists.txt
src/lib/mlx-cpp/patches-cuda/: dtype.cpp  ops.cpp
src/lib/mlx-cpp/patches/mlx/: dtype.cpp  fast.cpp
src/lib/mlx-cpp/turbo/: CMakeLists.txt  paged_attention.cpp  paged_attention.h  paged_attention.metal  sparse_v_sdpa.cpp  sparse_v_sdpa.h  sparse_v_sdpa.metal  turbo4_delegated_sdpa.cpp  turbo4_delegated_sdpa.h
src/lib/mlxcel-core/: Cargo.toml  build.rs
src/lib/mlxcel-core/cpp/: mlx_cxx_bridge.cpp  mlx_cxx_bridge.h  mlx_cxx_ext.cpp  mlx_cxx_internal.h  mlx_cxx_kernels.cpp  mlx_cxx_nemotron.cpp
src/lib/mlxcel-core/examples/: benchmark.rs  wht_microbench.rs
src/lib/mlxcel-core/metal/: fused_attention_metal4.metal
src/lib/mlxcel-core/src/: cache.rs  dtype.rs  ffi_tests.rs  fused_moe_parity_tests.rs  generate.rs  generation_policy.rs  hardware.rs  lang_analyzer.rs  layers.rs  lib.rs  loop_detection.rs  loop_detection_tests.rs  memory.rs  multimodal.rs  multimodal_tests.rs  ops.rs  rope_proportional.rs  sampling.rs  session.rs  session_tests.rs  speculative.rs  streams.rs  utils.rs  weights.rs
src/lib/mlxcel-core/src/cache/: batch_quant.rs  detach.rs  detach_tests.rs  paged.rs  paged_detach.rs  paged_detach_tests.rs  paged_pool_tests.rs  paged_turbo_tests.rs  ring.rs  sparse_v_tests.rs  turbo_tests.rs
src/lib/mlxcel-core/src/cache/turbo/: allowlist.rs  boundary.rs  codebook.rs  mod.rs  pack3.rs  quant.rs  quant3.rs  sparse_v.rs
src/lib/mlxcel-core/src/drafter/: masked_embedder.rs  masks.rs  mod.rs
src/lib/mlxcel-core/src/lang_analyzer/: cache.rs  mod.rs
src/lib/mlxcel-core/src/speculative/: mod.rs
src/lib/mlxcel-core/src/test_support/: env_lock.rs  mod.rs
src/lib/mlxcel-surgery/: Cargo.toml
src/lib/mlxcel-surgery/src/: config.rs  error.rs  lib.rs  pipeline.rs
src/lib/mlxcel-surgery/src/ops/: add.rs  add_apply_tests.rs  add_test_helpers.rs  add_tests.rs  interpolate.rs  mod.rs  scale.rs  scale_tests.rs
src/lib/mlxcel-surgery/tests/: add_integration.rs  interpolate_integration.rs  prune_integration.rs  replace_integration.rs  scale_integration.rs
src/lib/mlxcel-xla/: Cargo.toml  README.md  build.rs
src/lib/mlxcel-xla/assets/cohere/: config.json  decode.mlir  prefill.mlir
src/lib/mlxcel-xla/assets/cohere2/: config.json  decode.mlir  prefill.mlir
src/lib/mlxcel-xla/assets/exaone/: README.md  config.json  decode.mlir  prefill.mlir
src/lib/mlxcel-xla/assets/granite/: config.json  decode.mlir  prefill.mlir
src/lib/mlxcel-xla/assets/internlm3/: README.md  config.json  decode.mlir  prefill.mlir
src/lib/mlxcel-xla/assets/llama-3.2-1b/: README.md  decode.mlir  decode_ragged_b4.mlir  decode_ragged_b8.mlir  decode_ragged_logits_b4.mlir  decode_ragged_logits_b8.mlir  prefill.mlir  prefill_logits.mlir
src/lib/mlxcel-xla/assets/mimo/: README.md  config.json  decode.mlir  prefill.mlir
src/lib/mlxcel-xla/assets/minicpm/: config.json  decode.mlir  prefill.mlir
src/lib/mlxcel-xla/assets/olmoe-tiny/: config.json  decode.mlir  decode_ragged_logits_b4.mlir  prefill.mlir  prefill_logits.mlir
src/lib/mlxcel-xla/assets/phi3/: config.json  decode.mlir  prefill.mlir
src/lib/mlxcel-xla/assets/qwen2-moe-tiny/: config.json  decode.mlir  decode_ragged_logits_b4.mlir  prefill.mlir  prefill_embeddings_logits.mlir  prefill_logits.mlir
src/lib/mlxcel-xla/assets/qwen2.5-0.5b/: README.md  config.json
src/lib/mlxcel-xla/assets/qwen3-moe-tiny/: config.json  decode.mlir  decode_ragged_logits_b4.mlir  prefill.mlir  prefill_logits.mlir
src/lib/mlxcel-xla/assets/seed_oss/: README.md  config.json  decode.mlir  prefill.mlir
src/lib/mlxcel-xla/assets/stablelm/: config.json  decode.mlir  prefill.mlir
src/lib/mlxcel-xla/assets/starcoder2/: config.json  decode.mlir  prefill.mlir
src/lib/mlxcel-xla/csrc/: gemma3n_qmv.cu  xla_aux.c  xla_iree.c
src/lib/mlxcel-xla/src/: aux.rs  aux_manifest.rs  aux_smoke.rs  batch.rs  context.rs  iree.rs  lib.rs  prepared.rs  prepared_deepstack.rs  prepared_deepstack_tests.rs  prepared_gemma3n.rs  sampler.rs  validation.rs  vision_runtime.rs  weight_names.rs  weights.rs
src/lib/mlxcel-xla/src/emitter/: builder.rs  config.rs  context_tests.rs  gemma3n.rs  gemma3n_decode.rs  gemma3n_emit.rs  gemma3n_emit_ops.rs  gemma3n_math.rs  gemma3n_qmv.rs  gemma3n_schema.rs  gemma3n_weights.rs  mod.rs  model.rs  moe.rs  rope.rs  vision.rs  vision_config.rs
(+1329 files in other folders)
