[package]
name = "mlxcel"
version = "0.0.25"
edition = "2024"
description = "High-performance LLM/VLM/VLA inference on Apple Silicon and CUDA GPUs"
repository = "https://github.com/lablup/mlxcel"
license = "Apache-2.0"
keywords = ["mlx", "llm", "vlm", "inference"]
categories = ["science", "command-line-utilities"]

[[bin]]
name = "mlxcel"
path = "src/main.rs"

[[bin]]
name = "mlxcel-server"
path = "src/bin/mlx_server.rs"

[features]
default = []
metal = ["mlxcel-core/metal"]
accelerate = ["mlxcel-core/accelerate"]
cuda = ["mlxcel-core/cuda"]
test-utils = []

[dependencies]
# MLX - mlxcel-core (direct C++ bindings via cxx)
mlxcel-core = { path = "src/lib/mlxcel-core", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Tensors & Models
safetensors = "0.7.0"
tokenizers = "0.22.2"
sentencepiece = "0.13"
hf-hub = "0.5.0"

# Zero-copy buffers
bytes = "1.9"
memmap2 = "0.9"

# LZ4 compression (pure Rust, used for tensor transfer)
lz4_flex = "0.11"

# Error Handling
anyhow = "1.0.100"
thiserror = "2.0.11"

# Cryptographic hashing (for vision feature cache keys)
sha2 = "0.10"

# Fast non-cryptographic-grade hashing for prompt prefix cache keys (issue #419).
# BLAKE3 is used only for in-process cache-key digests; no security boundary
# depends on it.
blake3 = "1.5"

# CLI
clap = { version = "4.5.31", features = ["derive", "env"] }

# Image processing (for VLM)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

# Base64 (for VLM image data URIs in server API)
base64 = "0.22"

# Utils
glob = "0.3.2"
path-clean = "1.0.1"
minijinja = { version = "2.5", features = ["loop_controls"] }

# Structured outputs / constrained decoding (issue #550).
#
# `llguidance` is the same library used by mlx-vlm upstream PR #1047 for the
# JSON-schema response_format MVP. The Rust crate exposes `Matcher` /
# `ParserFactory` directly so we don't need to round-trip through Python.
# `toktrie_hf_tokenizers` adapts our existing HuggingFace `tokenizers::Tokenizer`
# into the byte-level `TokEnv` that llguidance expects.
#
# `default-features = false, features = ["lark", "referencing"]` drops the
# optional `rayon` thread pool and the `ahash` non-deterministic hasher; we
# keep `lark` (string-form grammar parsing — used by `from_tagged_str`) and
# `referencing` (JSON-schema $ref resolution required for nested schemas).
llguidance = { version = "1.7", default-features = false, features = ["lark", "referencing"] }
toktrie_hf_tokenizers = "1.7"

# HTTP Server
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["json", "macros"] }
tokio-stream = "0.1"
tokio-util = "0.7"
futures = "0.3"
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.1", features = ["server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-stream = "0.3"
fancy-regex = "0.17.0"
toml = "0.8"

[target.'cfg(unix)'.dependencies]
# Used for the RDMA-aware transport backend capability probe (io_uring on
# Linux, kqueue / writev batched sends on macOS). Unix-only: this does not
# affect Windows builds of the library today.
libc = "0.2"

[profile.release]
strip = true              # Strip all symbols for smaller binary
lto = true                # Full (fat) LTO for best size and performance
codegen-units = 1         # Single codegen unit for maximum optimization
opt-level = 3             # Maximum speed optimization (inference is compute-bound)
panic = "abort"           # Remove panic unwinding code

[lints.clippy]
upper_case_acronyms = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
large_enum_variant = "allow"
should_implement_trait = "allow"

[dev-dependencies]
tempfile = "3"

[[test]]
name = "distributed_integration"
required-features = ["test-utils"]

[[test]]
name = "pipeline_e2e"
required-features = ["test-utils"]
