[workspace]
members = [".", "src/lib/mlxcel-core", "src/lib/mlxcel-surgery"]
resolver = "2"

[package]
name = "mlxcel"
version = "0.1.4"
edition = "2024"
description = "High-performance LLM/VLM/VLA inference on Apple Silicon and CUDA GPUs"
repository = "https://github.com/lablup/mlxcel"
license = "Apache-2.0"
keywords = ["mlx", "llm", "vlm", "inference"]
categories = ["science", "command-line-utilities"]

[[bin]]
name = "mlxcel"
path = "src/main.rs"

[[bin]]
name = "mlxcel-server"
path = "src/bin/mlx_server.rs"

# Perf benchmark harness for the speculative drafter pairings.
# Captures no-drafter baseline tok/s and scaffolds
# the speculative numerator rows that follow-up will fill in. See
# `src/bin/speculative_bench.rs` for the module docs and `docs/model_tests.md`
# (`Speculative drafters`) for the deferral matrix.
[[bin]]
name = "speculative_bench"
path = "src/bin/speculative_bench.rs"

# Same-process decode benchmark harness used by `scripts/bench_decode.sh`.
# It loads a model once, runs the warmup generation, resets model/cache state,
# then runs the measured pass in the same process. This mirrors the Python
# `stream_generate` timing more closely than two separate `mlxcel generate`
# invocations, especially for prefill.
[[bin]]
name = "mlxcel-bench-decode"
path = "src/bin/bench_decode.rs"

[features]
default = ["surgery"]
metal = ["mlxcel-core/metal"]
accelerate = ["mlxcel-core/accelerate"]
cuda = ["mlxcel-core/cuda"]
test-utils = []
# Axis A "weight-load surgery" framework.
#
# On by default so production `mlxcel` and `mlxcel-server` binaries expose
# the `--surgery <config.yaml>` flag without rebuilds. Bit-exactness with
# the pre-surgery baseline is preserved without conditional features: when
# the flag is not supplied, the active-pipeline slot in `crate::surgery`
# stays `None`, the consolidated loaders call `transform.apply` zero times,
# and the load path matches `transform = None` byte-for-byte (verified by
# `crate::models::sanitize_tests::load_text_weights_with_none_transform_matches_legacy_path`).
#
# Build with `--no-default-features` to compile without the surgery crate
# entirely (e.g. CI parity tests against pre-A1 behaviour or constrained
# embedded targets).
surgery = ["dep:mlxcel-surgery"]

[dependencies]
# MLX - mlxcel-core (direct C++ bindings via cxx)
mlxcel-core = { path = "src/lib/mlxcel-core", default-features = false }

# Axis A weight-load surgery — opt-in via the `surgery` feature above.
mlxcel-surgery = { path = "src/lib/mlxcel-surgery", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Tensors & Models
safetensors = "0.7.0"
tokenizers = "0.22.2"
sentencepiece = "0.13"
hf-hub = "0.5.0"

# Zero-copy buffers
bytes = "1.9"
memmap2 = "0.9"

# LZ4 compression (pure Rust, used for tensor transfer)
lz4_flex = "0.11"

# Error Handling
anyhow = "1.0.100"
thiserror = "2.0.11"

# Cryptographic hashing (for vision feature cache keys)
sha2 = "0.10"

# Fast non-cryptographic-grade hashing for prompt prefix cache keys.
# BLAKE3 is used only for in-process cache-key digests; no security boundary
# depends on it.
blake3 = "1.8"

# CLI
clap = { version = "4.6.1", features = ["derive", "env"] }

# Interactive chat REPL line editing (epic #92, issue #96). `rustyline`
# provides the readline-style line editor (history, cursor movement,
# Ctrl-C / Ctrl-D handling) for `mlxcel`'s interactive chat loop. Only the
# offline CLI REPL uses it; the server is unaffected. Default features pull
# in the terminal backend so arrow-key history works out of the box.
rustyline = "14"

# Image processing (for VLM)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

# Base64 (for VLM image data URIs in server API)
base64 = "0.22"

# Utils
# `dirs` resolves the platform home directory for the downloader's HF-cache
# read-reuse default (`~/.cache/huggingface/hub`) when neither `HF_HUB_CACHE`
# nor `HF_HOME` is set (issue #93). Already present transitively via
# mlxcel-core; promoted to a direct dependency so `src/downloader/store.rs`
# can call `dirs::home_dir()` without leaning on a transitive re-export. The
# mlxcel store root itself comes from `mlxcel_core::cache_root()`, which uses
# the same crate.
dirs = "6"
glob = "0.3.2"
path-clean = "1.0.1"
minijinja = { version = "2.20", features = ["loop_controls", "fuel"] }
# Used by `src/downloader/mod.rs::file_url` to percent-encode `repo_id` /
# `revision` / `filename` path segments before composing the HF download URL
# (L1). Already transitively present via reqwest -> url; promoting
# to a direct dep so the downloader can call into it without depending on
# reqwest's transitive re-export.
percent-encoding = "2"

# Structured outputs / constrained decoding.
#
# `llguidance` is the same library used by mlx-vlm upstream PR #1047 for the
# JSON-schema response_format MVP. The Rust crate exposes `Matcher` /
# `ParserFactory` directly so we don't need to round-trip through Python.
# `toktrie_hf_tokenizers` adapts our existing HuggingFace `tokenizers::Tokenizer`
# into the byte-level `TokEnv` that llguidance expects.
#
# `default-features = false, features = ["lark", "referencing"]` drops the
# optional `rayon` thread pool and the `ahash` non-deterministic hasher; we
# keep `lark` (string-form grammar parsing — used by `from_tagged_str`) and
# `referencing` (JSON-schema $ref resolution required for nested schemas).
llguidance = { version = "1.7", default-features = false, features = ["lark", "referencing"] }
toktrie_hf_tokenizers = "1.7"

# HTTP Server
tokio = { version = "1.52", features = ["full"] }
axum = { version = "0.7", features = ["json", "macros"] }
tokio-stream = "0.1"
tokio-util = "0.7"
futures = "0.3"
uuid = { version = "1.23", features = ["v4"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.10", features = ["server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
indicatif = "0.18"
async-stream = "0.3"
fancy-regex = "0.17.0"
toml = "0.8"

[target.'cfg(unix)'.dependencies]
# Used for the RDMA-aware transport backend capability probe (io_uring on
# Linux, kqueue / writev batched sends on macOS). Unix-only: this does not
# affect Windows builds of the library today.
libc = "0.2"

[profile.release]
strip = true              # Strip all symbols for smaller binary
lto = true                # Full (fat) LTO for best size and performance
codegen-units = 1         # Single codegen unit for maximum optimization
opt-level = 3             # Maximum speed optimization (inference is compute-bound)
panic = "abort"           # Remove panic unwinding code

[lints.clippy]
upper_case_acronyms = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
large_enum_variant = "allow"
should_implement_trait = "allow"

[dev-dependencies]
tempfile = "3"

[[test]]
name = "distributed_integration"
required-features = ["test-utils"]

[[test]]
name = "pipeline_e2e"
required-features = ["test-utils"]
