# FFI-gate spike (issue #449 Phase 3 M2): prove Rust can drive IREE execution on
# this aarch64 box via the prebuilt iree-dist runtime, with no IREE source build.
# Standalone: own [workspace] so it never joins the mlxcel build graph.
[package]
name = "iree-ffi-gate"
version = "0.0.1"
edition = "2024"

[workspace]

# The `llama` bin (src/bin/llama.rs) grows the gate into a real token loop:
# read the bf16 Llama weights, drive prefill/decode through the shim, check
# token-exact. The original gate bin (src/main.rs) stays as the smoke test.
[dependencies]
safetensors = "0.4"
memmap2 = "0.9"
serde_json = "1"

[build-dependencies]
cc = "1"
