# Standalone spike. The empty [workspace] table makes this its own workspace
# root so it never joins the mlxcel build graph (issue #451 hard constraint).
[workspace]

[package]
name = "rust-emitter"
version = "0.1.0"
edition = "2021"
description = "Rust-native StableHLO text emitter for Llama-3.2-1B (spike #451)"

[[bin]]
name = "emit"
path = "src/main.rs"

[profile.release]
opt-level = 2
